# simplexity-

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md
source/simplexity~/: CMakeLists.txt  dsp.c  dsp.h  handlers.c  handlers.h  noise.c  noise.h  simplexity~.c  structs.h
